// Protocol Buffer file for the 'service1' service

syntax = "proto3";

// Options for generating Java files with multiple files, specifying the Java package, and setting the outer class name
option java_multiple_files = true;
option java_package = "grpc.services.service1";
option java_outer_classname = "Service1Impl";

// Package name for the 'service1' service
package service1;

// Importing the 'schedule' service definition from another Proto file
import "schedule.proto";

// Service Definition for the 'ScheduleService'
service ScheduleService {
rpc registerSchedule(ScheduleRequest) returns (ScheduleResponse) {} 
// RPC method for registering a schedule
rpc login(LoginRequest) returns (LoginResponse) {} 
// RPC method for login
}

// Definition of the 'ScheduleRequest' message with its fields
message ScheduleRequest {
schedule.Schedule schedule = 1; // Field for the schedule to be registered
}

// Definition of the 'ScheduleResponse' message with its fields
message ScheduleResponse {
bool registered = 1; // Field indicating if the schedule is registered
schedule.Schedule schedule = 2; // Field containing the registered schedule
}

// Definition of the 'LoginRequest' message with its fields
message LoginRequest {
string name = 1; // Field for the name for login
string position = 2; // Field for the position for login
}

// Definition of the 'LoginResponse' message with its fields
message LoginResponse {
bool authenticated = 1; // Field indicating if the login is authenticated
string loginMessage = 2; // Field containing the login message
}